--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -13,19 +13,16 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
-    "@types/ws": "^8.18.1",
-    "@xterm/addon-fit": "^0.11.0",
-    "@xterm/xterm": "^6.0.0",
     "chokidar": "^4.0.3",
     "clsx": "^2.1.1",
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "node-pty": "^1.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.18",
-    "ws": "^8.19.0"
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
