--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "js-yaml": "^4.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
@@ -28,6 +29,7 @@
     "@eslint/js": "^9.39.1",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
